blog/static/blog/assets/css/blog.css
@import url('https://fonts.googleapis.com/css?family=Cabin:400,400i,700');

body,
html {
    height: 100%;
}
html {
    -webkit-overflow-scrolling: touch;
}
.prettyprint {
    display: none;
}
:focus {
    outline: 0 !important;
}
::selection {
    background: #b371a2;
    color: #fff;
}
::-moz-selection {
    background: #b371a2;
    color: #fff;
}

body {
	font-family: 'Cabin', sans-serif;
	font-size: 20px;
    color: #555;
    background: #fffff4;
    -webkit-font-smoothing: antialiased;
    -webkit-text-size-adjust: 100%;
    text-rendering: optimizeLegibility;
    overflow-x: hidden;
    height: auto !important;
}

h1, h2, h3, h4, h5, h6 {
    margin-bottom: 0;
}

p {
    font-size: 20px;
}

a {
    color: #6696C8;
}
a:hover,
a:focus {
    color: #1ABB9C;
}

.navbar {
	padding-top: 1rem;
	padding-bottom: 1rem;
	font-size: 42px;
    background-color: #FFEB3B;
}

.navbar-header {
    float: left;
    padding: 12px;
    text-align: center;
    width: 100%;
}

.navbar-header a {
	font-weight: bold;
	color: #555;
}

.navbar-header p {
	font-size: 14px;
	font-weight: normal;
	text-transform: uppercase;
}

.navbar-brand {
	float:none;
}

@media (min-width: 992px) {
	.container {
	    max-width: 720px;
	}
}

.hentry {
	padding-bottom: 42px;
}

.entry-title {
	font-size: 26px;
	font-weight: bold;
	line-height: 1;
}

.entry-title a {
	color: #555;
}

.entry-info {
	color: #8D8D8D;
	font-size: 14px;
	line-height: 1;
	text-transform: uppercase;
}

.entry-body {
	padding-top: 16px;
}

#content {
	padding-top: 42px;
}

